display share url

--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,8 @@ a {
 	margin-top: 30px;
 	background-color:#000000;
 	border: 1px solid #EFDFAF;
-	width: 400px; color:#EFDFAF;
+	width: 300px;
+	color:#EFDFAF;
 	border-radius:3px;
 	text-align:center;
 }
