get canvas size from data and resize canvas accordingly

--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,12 @@ hr {
 	margin-right: auto;
 }
 
+#canvas {
+	border-style: solid;
+	border-width: 1px;
+	border-color: #EFDFAF;
+}
+
 #infotable {
 	width: 100%;
 	text-align:center;
