--- a/style/style.css
+++ b/style/style.css
@@ -177,6 +177,7 @@ button.disabled {
 
 #defaultButton, #autoButton, #customButton {
 	margin-bottom: 6px;
+	width: 80px;
 }
 
 #testButton, #adjustButton {
