--- a/style/style.css
+++ b/style/style.css
@@ -226,3 +226,70 @@ button.important {
 input.invalid {
     border: 1px solid #f06d65;
 }
+
+#modalScreen {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: #EFDFAF;
+	z-index: 999;
+	opacity: 0.2;
+	display: none;
+}
+
+.modalDialog {
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	margin-top: -90px;
+	margin-left: -170px;
+	width: 340px;
+	height: 180px;
+	padding-bottom: 20px;
+	padding-top: 20px;
+	background: black;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #EFDFAF;
+	text-align: center;
+	font-size: 22px;
+	z-index: 1000;
+	display: none;
+}
+
+.dialogButtonSet {
+	margin-top: 20px;
+}
+
+#titleTb {
+	margin-top: 15px;
+	margin-bottom: 20px;
+	width: 250px;
+}
+
+#authorTb {
+	margin-top: 15px;
+	width: 250px;
+}
+
+#loadingImage {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -50px;
+	margin-left: -50px;
+	width: 100px;
+	height: 100px;
+	display: none;
+}
+
+.rotating_icon{
+    -webkit-animation:spin 1.5s linear infinite;
+    -moz-animation:spin 1.5s linear infinite;
+    animation:spin 1.5s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
