--- a/style/style.css
+++ b/style/style.css
@@ -339,6 +339,11 @@ input.invalid {
 	text-align: center;
 }
 
+#captchaContainer {
+	display: none;
+	margin-top: 15px;
+}
+
 .rotating_icon{
     -webkit-animation:spin 1.5s linear infinite;
     -moz-animation:spin 1.5s linear infinite;
